--- a/typist/src/App.css
+++ b/typist/src/App.css
@@ -18,11 +18,17 @@
   font-size: 1.5em;
 }
 
-.App-intro {
-  font-size: large;
-}
-
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.Square-Active {
+  fill: #222222;
+  stroke: black;
+}
+
+.Square-Inactive {
+  fill: white;
+  stroke: black;
 }
